Began to set up ttf

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,11 @@ project(TextBased)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMAKE")
-set(SOURCE_FILES  src/Game.cpp src/Game.h src/Main.cpp src/Renderer/Renderer.cpp src/Renderer/Renderer.h src/Window/Window.cpp src/Window/Window.h)
+set(SOURCE_FILES
+        src/Game.cpp src/Game.h
+        src/Main.cpp
+        src/Renderer/Renderer.cpp src/Renderer/Renderer.h
+        src/Window/Window.cpp src/Window/Window.h src/InputProcessor/InputProcessor.cpp src/InputProcessor/InputProcessor.h)
 
 Message("")
 Message( STATUS "SOURCE entry point : " ${SOURCE_FILES} )
