--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,13 +23,13 @@ set(SOURCE_FILES
         src/Renderer/Renderer.cpp src/Renderer/Renderer.h
         src/Window/Window.cpp src/Window/Window.h
         src/InputProcessor/InputProcessor.cpp src/InputProcessor/InputProcessor.h
-        src/ECS/Components/TransformComponent.h
+        src/ECS/Components/PositionComponent.h
         src/Objects/Position.h src/Objects/Velocity.h
         src/ECS/Systems/MovementSystem.cpp src/ECS/Systems/MovementSystem.h
         "src/ECS/Design/Objects/Entity.cpp" "src/ECS/Design/Objects/Entity.h"
         "src/ECS/Design/Objects/Component.cpp" "src/ECS/Design/Objects/Component.h"
         "src/ECS/Design/Objects/System.cpp" "src/ECS/Design/Objects/System.h"
-        "src/ECS/Design/Managers/ECSManager.cpp" "src/ECS/Design/Managers/ECSManager.h" src/ECS/Design/Objects/Pool.cpp src/ECS/Design/Objects/Pool.h src/ECS/Design/Managers/EntityManager.cpp src/ECS/Design/Managers/EntityManager.h)
+        "src/ECS/Design/Managers/ECSManager.cpp" "src/ECS/Design/Managers/ECSManager.h" src/ECS/Design/Objects/Pool.cpp src/ECS/Design/Objects/Pool.h src/ECS/Design/Managers/EntityManager.cpp src/ECS/Design/Managers/EntityManager.h src/ECS/Components/MovementComponent.h)
 
 Message("")
 Message( STATUS "SOURCE entry point : " ${SOURCE_FILES} )
