Edited the hierarchy to just create an event system as a wrapper between the creator/consumer distinction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,7 +26,7 @@ set(SOURCE_FILES
         src/main/Game/GameSystems/InputProcessor/InputProcessor.cpp src/main/Game/GameSystems/InputProcessor/InputProcessor.h
         src/main/ECS/Components/PositionComponent.h
         src/main/Helpers/Objects/Position.h src/main/Helpers/Objects/Velocity.h
-        src/main/ECS/Systems/MovementSystem.cpp src/main/ECS/Systems/MovementSystem.h
+        src/main/ECS/Systems/UpdateSystems/MovementSystem.cpp src/main/ECS/Systems/UpdateSystems/MovementSystem.h
         "src/main/ECS/Design/Objects/Entity.cpp" "src/main/ECS/Design/Objects/Entity.h"
         "src/main/ECS/Design/Objects/Component.cpp" "src/main/ECS/Design/Objects/Component.h"
         "src/main/ECS/Design/Objects/System.cpp" "src/main/ECS/Design/Objects/System.h"
@@ -38,13 +38,13 @@ set(SOURCE_FILES
         src/main/ECS/Design/Managers/EntityManager.cpp src/main/ECS/Design/Managers/EntityManager.h
         src/main/Globals.h
         src/main/ECS/Systems/RenderSystem.cpp src/main/ECS/Systems/RenderSystem.h
-        src/main/ECS/Components/TextComponent.h src/main/ECS/Systems/UpdateSystem.h
+        src/main/ECS/Components/TextComponent.h src/main/ECS/Systems/UpdateSystems/UpdateSystem.h
         src/main/Helpers/Objects/Size.h
         src/main/Game/TextGenerator.cpp src/main/Game/TextGenerator.h src/main/Game/GameManager.cpp src/main/Game/GameManager.h
         resources/SDL_FontCache.c resources/SDL_FontCache.h src/main/ECS/Components/ColliderComponent.h
-        src/main/ECS/Systems/CollisionCheckSystem.cpp src/main/ECS/Systems/CollisionCheckSystem.h
+        src/main/ECS/Systems/EventCreationSystems/CollisionCheckSystem.cpp src/main/ECS/Systems/EventCreationSystems/CollisionCheckSystem.h
         src/main/ECS/Components/StyleComponent.h src/main/Exceptions/NoStyleException.h
-        src/main/Game/Levels/Level1.cpp src/main/Game/Levels/Level1.h src/main/Game/GameSystems/Renderer/SDLRenderer.cpp src/main/Game/GameSystems/Renderer/SDLRenderer.h src/main/Helpers/EventSystem/EventBus/EventBus.cpp src/main/Helpers/EventSystem/EventBus/EventBus.h src/main/Helpers/EventSystem/EventCallback/EventCallback.cpp src/main/Helpers/EventSystem/EventCallback/EventCallback.h src/main/Helpers/EventSystem/Events/Event.h src/main/ECS/Systems/EventCreationSystem.h)
+        src/main/Game/Levels/Level1.cpp src/main/Game/Levels/Level1.h src/main/Game/GameSystems/Renderer/SDLRenderer.cpp src/main/Game/GameSystems/Renderer/SDLRenderer.h src/main/Helpers/EventSystem/EventBus/EventBus.cpp src/main/Helpers/EventSystem/EventBus/EventBus.h src/main/Helpers/EventSystem/EventCallback/EventCallback.cpp src/main/Helpers/EventSystem/EventCallback/EventCallback.h src/main/Helpers/EventSystem/Events/Event.h src/main/ECS/Systems/EventCreationSystems/EventCreationSystem.h src/main/ECS/Systems/EventHandlerSystems/CollisionHandleSystem.cpp src/main/ECS/Systems/EventHandlerSystems/CollisionHandleSystem.h src/main/ECS/Systems/EventHandlerSystems/EventHandlerSystem.h src/main/ECS/Systems/EventSystem.h)
 
 Message("")
 Message( STATUS "SOURCE entry point : " ${SOURCE_FILES} )
